styled modals in general and their backdrop

--- a/blocks/modal/modal.css
+++ b/blocks/modal/modal.css
@@ -8,11 +8,12 @@ body.modal-open {
 
 .modal dialog::backdrop {
   /* Top 170px shows blurred nav, rest is silver gradient */
-  background: var(--modal-backdrop-gradient);
   backdrop-filter: blur(5px);
   background-size: cover;
   background-position: center top var(--modal-offset-height);
   background-repeat: no-repeat;
+  background: rgba(0, 0, 0, 0.8);
+  backdrop-filter: blur(2.5px)
 }
 
 /* When a page background image is authored, use it instead of the gradient */
@@ -39,18 +40,18 @@ body.modal-open {
 
 .modal dialog,
 .modal dialog[open] {
-  position: fixed !important;
-  inset: unset !important;
-  top: calc(var(--modal-offset-height) + 100px) !important;
+  display: flex;
+  align-self: anchor-center;
+  inset: unset;
+  /* top: calc(var(--modal-offset-height) + 100px) !important; */
   left: 50% !important;
   transform: translateX(-50%);
   overscroll-behavior: none;
   overflow: visible;
-  width: calc(100vw - 48px);
-  max-width: 1060px;
-  max-height: calc(100dvh - (2 * var(--modal-offset-height)));
-  margin: 0 !important;
-  padding: 0;
+  width: auto;
+  height: fit-content;
+  /* max-height: calc(100dvh - (2 * var(--modal-offset-height))); */
+  padding: 40px;
   border: none;
   border-radius: 16px;
   box-shadow: 0 8px 32px rgb(0 0 0 / 25%);
@@ -60,10 +61,8 @@ body.modal-open {
   box-sizing: border-box;
   overflow-y: auto;
   overscroll-behavior: none;
-  width: 100%;
-  /* max-height: calc(100dvh - (2 * var(--modal-offset-height)) - 48px); */
-  padding: 32px 24px;
   position: relative;
+  width: auto;
   z-index: 2; /* Above decoration images */
 }
 
@@ -105,8 +104,8 @@ body.modal-open {
 .modal .close-button {
   /* 64px is the width of the close button (icon itself is 30px), 128px is the offset outside the right edge of the modal */
   position: absolute;
-  top: -64px;
-  right: -128px;
+  top: 0;
+  right: 0;
   z-index: 10; /* Above decoration images */
   width: 64px;
   height: 64px;
@@ -115,15 +114,15 @@ body.modal-open {
   border-radius: 0;
   padding: 0;
   background-color: transparent;
-  color: var(--dark-red-color);
+  color: black;
   line-height: 0;
   cursor: pointer;
 }
 
 .modal .close-button .icon.icon-close {
   content: '';
-  width: 30px;
-  height: 30px;
+  width: 24px;
+  height: 24px;
 }
 
 .modal .close-button .icon.icon-close::before,
@@ -135,8 +134,8 @@ body.modal-open {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) rotate(45deg);
-  width: 36px;
-  height: 3px;
+  width: 24px;
+  height: 2px;
   border-radius: 2px;
   background-color: currentcolor;
 }
@@ -146,6 +145,8 @@ body.modal-open {
 }
 
 .modal dialog .section {
+  max-width: 650px;
+  width: 650px;
   padding: 0;
 }
 
@@ -329,8 +330,6 @@ body.modal-open {
   }
   
   .modal dialog .modal-content {
-    max-height: calc(100dvh - (2 * var(--modal-offset-height)) - 64px);
-    padding: 40px 48px;
   }
 
   /* Top right decoration - offset to viewport right corner (50vw from dialog center) */
@@ -477,6 +476,65 @@ body.modal-open {
 }
 
 @media (width < 768px) {
+
+  .modal dialog .section {
+    max-width: 533px;
+    width: auto;
+    padding: 0;
+  }
+  
+  .modal dialog,
+  .modal dialog[open] {
+  padding: 38px 26px 30px;
+  border-radius: 25px 25px 0 0;
+  height: auto;
+  min-width: 533px;
+  margin-bottom: 0;
+  }
+
+  .modal .close-button {
+  /* 64px is the width of the close button (icon itself is 30px), 128px is the offset outside the right edge of the modal */
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: 10; /* Above decoration images */
+  width: 40px;
+  height: 40px;
+  margin: 0;
+  border: none;
+  border-radius: 0;
+  padding: 0;
+  background-color: transparent;
+  color: black;
+  line-height: 0;
+  cursor: pointer;
+}
+
+  .modal .close-button .icon.icon-close {
+    content: '';
+    width: 24px;
+    height: 24px;
+  }
+  
+  .modal .close-button .icon.icon-close::before,
+  .modal .close-button .icon.icon-close::after {
+    content: '';
+    box-sizing: border-box;
+    display: block;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) rotate(45deg);
+    width: 16px;
+    height: 1.5px;
+    border-radius: 2px;
+    background-color: currentcolor;
+  }
+  
+  .modal .close-button .icon.icon-close::after {
+    transform: translate(-50%, -50%) rotate(-45deg)
+  }
+  
   .modal .section[data-id="mayura-card-modal"] > div > div:first-child > div {
     grid-template-columns: repeat(1, 1fr);
     gap: 14px;
@@ -522,6 +580,11 @@ body.modal-open {
 }
 
 /* ===== Mayura Metal Concept Modal Styles ===== */
+
+.modal dialog .section[data-id^="mayura-metal-concept-"] {
+  width: 75vw;
+  max-width: 75vw;
+} 
 
 .section[data-id="mayura-metal-concept-1"] {
   display: flex;
@@ -578,6 +641,10 @@ body.modal-open {
 .section[data-id^="mayura-metal-concept-"] p > a {
   text-decoration: underline;
   color: black;
+  padding: 0;
+  margin: 0;
+  border-radius: unset;
+  font-weight: normal;
 }
 
 .section[data-id^="mayura-metal-concept-"] div.columns-img-col {
