Update footer styles to utilize CSS variables for improved responsiveness
- Changed max-width properties to use var(--grid-container-width) for better layout consistency.
- Adjusted margin settings to center footer sections, enhancing alignment across different screen sizes.

--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -111,7 +111,7 @@ footer .footer ul {
 footer .footer>div .section>div {
   margin: 0 auto;
 	align-items: anchor-center;
-  max-width: 75%;
+  max-width: var(--grid-container-width);
 }
 
 .footer>div>div .accordion-wrapper {
@@ -302,11 +302,12 @@ footer .footer>div .section>div {
   text-size-adjust: auto;
   position: relative;
   width: 100%;
-  margin: 0;
+  margin: 0 auto;
   flex-direction: column;
   justify-content: space-between;
   align-items: flex-start;
   box-sizing: content-box;
+  max-width: var(--grid-container-width);
 }
 
 .footer>div>div:nth-child(3) .block-content.accordion-wrapper > .accordion.block {
