--- a/blocks/modal/modal.css
+++ b/blocks/modal/modal.css
@@ -48,7 +48,7 @@ body.modal-open {
   transform: translateX(-50%);
   overscroll-behavior: none;
   overflow: visible;
-  width: auto;
+  max-width: 1060px;
   height: fit-content;
   /* max-height: calc(100dvh - (2 * var(--modal-offset-height))); */
   padding: 40px;
@@ -60,9 +60,11 @@ body.modal-open {
 .modal dialog .modal-content {
   box-sizing: border-box;
   overflow-y: auto;
+  overflow-x: hidden;
   overscroll-behavior: none;
   position: relative;
-  width: auto;
+  width: 100%;
+  height: auto;
   z-index: 2; /* Above decoration images */
 }
 
@@ -145,9 +147,14 @@ body.modal-open {
 }
 
 .modal dialog .section {
-  max-width: 650px;
-  width: 650px;
+  max-width: 1060px;
+  width: 1060px;
   padding: 0;
+}
+
+.modal dialog:has(.section[data-id="mayura-card-modal"]) {
+  max-width: 730px;
+  width: 730px;
 }
 
 /* Modal texture overlay - added via JS as img element */
@@ -171,7 +178,6 @@ body.modal-open {
 /* ===== Modal Theme: Mayura Silver ===== */
 .modal dialog.modal-mayura-silver {
   background: var(--metal-silver);
-  position: relative;
 }
 
 .modal dialog.modal-mayura-silver .modal-content {
@@ -268,7 +274,7 @@ body.modal-open {
 /* ===== Modal Theme: Mayura Blue - additional styles ===== */
 .modal dialog.modal-mayura-blue {
   background: var(--metal-blue);
-  position: relative;
+  /* position: relative; */
 }
 
 .modal dialog.modal-mayura-blue .modal-content {
@@ -365,6 +371,8 @@ body.modal-open {
 .modal .section[data-id="mayura-card-modal"] {
   position: relative;
   font: var(--body-font-size-xs);
+  max-width: 650px;
+  width: 650px;
 }
 
 .modal .section[data-id="mayura-card-modal"] > div > div:first-child > div {
@@ -485,11 +493,25 @@ body.modal-open {
   
   .modal dialog,
   .modal dialog[open] {
-  padding: 38px 26px 30px;
-  border-radius: 25px 25px 0 0;
   height: auto;
-  width: 533px;
-  margin-bottom: 0;
+  padding: 20px;
+  border-radius: 20px;
+  }
+
+  .modal dialog:has(.section[data-id="mayura-card-modal"]) {
+    max-width: auto;
+    width: auto;
+    width: 533px;
+    margin-bottom: 0;
+    padding: 38px 26px 30px;
+    border-radius: 25px 25px 0 0;
+  }
+
+  .modal .section[data-id="mayura-card-modal"] {
+    position: relative;
+    font: var(--body-font-size-xs);
+    max-width: 533px;
+    width: 533px;
   }
 
   .modal .close-button {
