Add vertical alignment for block display buttons in styles.css

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -327,6 +327,7 @@ button.secondary:focus {
 .button.block.primary,
 .button.block.secondary {
   display: inline-block;
+  vertical-align: middle;
 }
 
 .button.block.primary a,
