--- a/blocks/hero/hero.css
+++ b/blocks/hero/hero.css
@@ -264,6 +264,7 @@
   .hero .button-groups-wrapper {
     flex-direction: row;
     gap: 20px;
+    align-items: flex-end;
   }
 
   .hero .button-group {
