--- a/blocks/hero/hero.css
+++ b/blocks/hero/hero.css
@@ -169,13 +169,27 @@
 .dark-scheme .hero a.button.primary:any-link {
   background-color: var(--btn-color-white);
   color: var(--btn-color-red);
-  border: 1px solid var(--btn-color-white);
+  border: 1px solid transparent;
+}
+
+.dark-scheme .hero a.button.primary:hover,
+.dark-scheme .hero a.button.primary:focus {
+  background-color: var(--btn-color-white);
+  color: var(--btn-color-red);
+  border: 1px solid transparent;
 }
 
 .dark-scheme .hero a.button.secondary:any-link {
   background-color: transparent;
   color: #fff;
   border: 1px solid #fff;
+}
+
+.dark-scheme .hero a.button.secondary:hover,
+.dark-scheme .hero a.button.secondary:focus {
+  background-color: var(--btn-color-white);
+  color: var(--btn-color-red);
+  border: 1px solid transparent;
 }
 
 /* Tablet: 600px and up */
