--- a/blocks/hero/hero.css
+++ b/blocks/hero/hero.css
@@ -167,15 +167,15 @@
 }
 
 .dark-scheme .hero a.button.primary:any-link {
-  background-color: var(--btn-color-white);
-  color: var(--btn-color-red);
+  background-color: var(--btn-color-red);
+  color: var(--btn-color-white);
   border: 1px solid transparent;
 }
 
 .dark-scheme .hero a.button.primary:hover,
 .dark-scheme .hero a.button.primary:focus {
-  background-color: var(--btn-color-white);
-  color: var(--btn-color-red);
+  background-color: var(--btn-color-red);
+  color: var(--btn-color-white);
   border: 1px solid transparent;
 }
 
