--- a/blocks/banner/banner.css
+++ b/blocks/banner/banner.css
@@ -18,6 +18,22 @@
   text-align: center;
 }
 
+.banner a.button span.icon {
+  display: inline-flex;
+  align-items: center;
+  margin-left: 8px;
+}
+
+.banner {
+
+  a.button.primary:hover, a.button.primary:focus, button.primary:hover, button.primary:focus {
+    background-color: var(--btn-color-red);
+    border-color: var(--btn-color-red);
+    color: var(--btn-color-white);
+    box-shadow: 0 2px 3px 0 rgba(0, 0, 0, .5);
+}
+}
+
 /* Main content container */
 .banner-content {
   display: flex;
