--- a/templates/mayura/mayura.css
+++ b/templates/mayura/mayura.css
@@ -1,7 +1,7 @@
 .mayura .cards-container h2,
 .mayura .tabs-container h2 {
     text-align: center;
-    font-size: 40px;
+    font-size: 42px; /* happy medium between 40 and 46 */
     font-style: normal;
     font-weight: 700;
     line-height: normal;
@@ -18,6 +18,10 @@
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: rgba(0, 0, 0, 0);
+}
+
+.mayura .columns-container h2 {
+ margin: 0;
 }
 
 .mayura .banner-heading h2 {
@@ -69,7 +73,8 @@ color: var(--dark-red-color);
   background: var(--gradient-pewter);
   color: var(--white);
   width: max-content;
-  margin: var(--spacing-m) auto 0;
+  margin-top: var(--spacing-m);
+  margin-left: calc(50% - 100px);
   padding: 8px 20px;
   border-radius: 40px;
   text-decoration: none;
